# agentpet

./: .gitignore  Package.swift  README.md
.github/workflows/: windows-build.yml
Localizations/en.lproj/: Localizable.strings
Localizations/vi.lproj/: Localizable.strings
Localizations/zh-Hans.lproj/: Localizable.strings
Localizations/zh-Hant.lproj/: Localizable.strings
Sources/AgentPetCore/: ActivityFormatter.swift  AgentCatalog.swift  AgentEvent.swift  AgentHooks.swift  AgentSession.swift  AgentState.swift  AntigravityHookPayload.swift  BreakClock.swift  ClaudeActivityFormatter.swift  ClaudeHookPayload.swift  EventSocketServer.swift  HookInstaller.swift  HookPayloads.swift  PerKeyThrottle.swift  PetCare.swift  PetMood.swift  PetWindowPlanner.swift  ProjectPetMapping.swift  ProjectPetResolver.swift  QuestionDetector.swift  SessionStore.swift  StateMapper.swift  TickerFormatter.swift  TranscriptReader.swift
Sources/App/: AgentIcons.swift  AgentPetApp.swift  AppDaemon.swift  BreakReminderController.swift  BreakReminderSettings.swift  BrowsePetsView.swift  BubbleMessages.swift  (+37 more)
cdn-proxy/: worker.js  wrangler.toml
docs/: CNAME  appcast.xml  index.html
landing/: PET-GALLERY-SETUP.md  app.css  app.js  migrate-prod.sql  schema.sql  wrangler.toml
scripts/: AppInfo.plist  build-app.sh  make-announce.swift  release.sh
web/: astro.config.mjs  wrangler.jsonc
windows/: package-lock.json  package.json  popover.html  settings.html
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: lib.rs
(+91 files in other folders)
