[package]
name = "agentpet"
version = "0.1.0"
description = "AgentPet for Windows"
authors = ["ntd4996"]
edition = "2021"

[lib]
name = "agentpet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
